# aoc2023

./: .gitignore  CMakeLists.txt  LICENSE  README.md
day1/: CMakeLists.txt  part1.c  part2.c
day2/: CMakeLists.txt  part1.c  part2.c
day3/: CMakeLists.txt  part1.c  part2.c
day4/: CMakeLists.txt  part1.c  part2.c
day5/: CMakeLists.txt  part1.c  part2.c
day6/: CMakeLists.txt  part1.c
day7/: CMakeLists.txt  part1.c  part2.c
scripts/: bug-finder.sh
